New admin pages and index page with fixed navigation links.

--- a/webdsl-jba/application.ini
+++ b/webdsl-jba/application.ini
@@ -8,9 +8,11 @@ smtppass=
 tomcatpath=/opt/tomcat
 httpport=8080
 httpsport=8443
-db=h2
-dbfile=web-dsl-simple.db
-dbmode=update
+dbserver=127.0.0.1
+dbuser=webdsl
+dbpassword=webdsl123
+dbname=webdsldb
+dbmode=create-drop
 indexdir=searchindex
 pluginbuildpollserver=true
 pluginbuildpollwaittime=10000
