--- a/webdsl-jba/application.ini
+++ b/webdsl-jba/application.ini
@@ -8,7 +8,7 @@ smtppass=
 tomcatpath=/opt/tomcat
 httpport=8080
 httpsport=8443
-dbserver=127.0.0.1
+dbserver=localhost
 dbuser=webdsl
 dbpassword=webdsl123
 dbname=webdsldb
